split sass into separate files, fixed wonky input cut offs in Firefox

--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -42,7 +42,7 @@ h3, .h3 {
 		transition: height 0.2s ease-in, color 0.5s ease;
 	}
 
-	&:hover {
+	&:hover, &:focus, &:active {
 		color: $body-color;
 
 		&:before {
@@ -51,269 +51,15 @@ h3, .h3 {
 	}
 }
 
-.bookend {
-	color: $primary-color--light;
-	background-color: $primary-color;
-	padding: 1em 0;
-
-
-	a {
-		color: $primary-color--light;
-		text-decoration: none;
-		display: block;
-
-		&:hover {
-			color: lighten( $primary-color--light, 10 );
-		}
-	}
-
-
-	&--footer {
-
-		p {
-			margin-bottom: 0;
-		}
-	}
-}
-
-
-.header {
-	padding: 0;
-	position: fixed;
-	top: 0;
-	width: 100%;
-	z-index: 20;
-
-	&_logo {
-		display: inline-block;
-
-		&_title {
-			font-size: 2em;
-			font-style: italic;
-			line-height: 2em;
-			letter-spacing: 0;
-			margin-bottom: -0.4em;
-		}
-
-		&_subtitle {
-			font-size: .9em;
-			line-height: 0.5em;
-		}
-	}
-
-	&_nav {
-
-		&_list {
-
-			list-style-type: none;
-
-			li {
-				padding: 0 2em;
-				display: inline-block;
-			}
-		}
-	}
-}
 
 .section {
 	padding: 5em 0;
 }
 
-.intro {
-	margin-top: 5em;
-	overflow: hidden;
-	background-color: lighten( $primary-color, 2 );
-	text-align: center;
-	position: relative;
-	padding-bottom: calc( 5em + 70px );
-
-	&:before {
-      content: '\002767';
-      font-size: 100em;
-      line-height: 500px;
-      color: $primary-color;
-      top: 0px;
-      left: 0px;
-      display: block;
-      text-align: center;
-      position: absolute;
-      width: 100%;
-    }	
-
-	&_tagline {
-		color: $heading-color;
-	}
-
-	&_arrow {
-    	margin-left: -0;
-
-    	&:before {
-			content: '';
-			position: absolute;
-			bottom: 0;
-			width: calc(50% - 70px);
-			left: -70px;
-			z-index: 10;
-			border-left: 70px solid transparent;
-			border-right: 70px solid transparent;
-			border-top: 70px solid transparent;
-			border-bottom: 70px solid $background-color;
-		}
-
-		&:after {
-			content: '';
-			position: absolute;
-			bottom: 0;
-			width: calc(50% - 70px);
-			right: -70px;
-			z-index: 10;
-			border-left: 70px solid transparent;
-			border-right: 70px solid transparent;
-			border-top: 70px solid transparent;
-			border-bottom: 70px solid $background-color;			
-		}
-    }
 
 
-	&_skills {
-		display: inline-block;
-		margin: 0 auto;
-		color: $heading-color;
 
-		li {
-			font-family: $font-family-headings;
-			font-size: 1.3em;
-			font-weight: bold;
-			display: inline-block;
-			text-align: center;
-			padding: 0 1em;
-		}
-	}
-}
 
-.work {
 
-	a.work_item {
-		margin-top: 2em;
-		text-align: center;
-		display:  block;
-		position: relative;
-		padding: .5em;
 
-		&:before {
-			content: none;
-			height: 0px;
-		}
-		
 
-		&:hover {
-
-			&:before {
-				content: '';
-				background-color: rgba( $primary-color--light, .4 );
-				position: absolute;
-				top: 0;
-				left: 0;
-				width: 100%;
-				height: 100%;
-				display: block;
-			}
-		}
-
-	}
-
-	&_item_img-container {
-
-		&_img {
-
-			width: 90%;
-	    	height: auto;
-	    	box-shadow: 0px 0px 3px $primary-color--light;
-
-		}
-	}
-}
-
-//lighten( $primary-color--light, 8 )
-.about {
-	background-color: lighten( $primary-color, 50 );
-
-	&_img {
-		line-height: 0;
-		display: inline-block;
-		box-shadow: 0px 0px 3px $primary-color--light;
-	}
-}
-
-.contact {
-	background-color: lighten( $primary-color, 45 );
-	overflow: hidden;
-	position: relative;
-
-	&:before {
-		content: '';
-		font-size: 100em;
-		line-height: 500px;
-		color: lighten( $primary-color, 50 );
-		top: 0px;
-		left: 0px;
-		display: block;
-		text-align: center;
-		position: absolute;
-		width: 100%;
-    }	
-
-    &_form {
-
-    	input, textarea {
-    		padding: 0.8em;
-			display: inline-block;
-			background-color: $background-color;
-			border: 3px solid lighten( $primary-color, 40 );
-			transition: border 0.2s;
-
-			&:hover {
-				border: 3px solid lighten( $primary-color, 20 );
-			}
-
-			&:focus {
-				border: 3px solid $link-color;
-			}
-    	}
-
-    	textarea {
-    		line-height: 1.1em;
-    	}
-
-    	input.button-primary {
-    		padding: 1.15em 2em;
-			font-size: 1em;
-			letter-spacing: 0;
-			line-height: 0em;
-			transition: background 0.2s;
-			text-transform: none;
-			font-weight: 300;
-
-    		&:focus, &:hover {
-				background-color: $link-color;
-			}
-    	}
-    }
-
-	&_details {
-
-		@media (#{$bp-larger-than-phablet}) {
-			&.columns {
-				margin-left: 8%;
-			}
-		}
-
-		&_list {
-	    	list-style-type: none;
-
-	    	i {
-	    		padding-right: 5px;
-	    	}
-	    }
-	}
-}
